fixed text fields to have same width on mobile devices

--- a/Frontend/ParkingApp/src/app/statistics/statistics.component.css
+++ b/Frontend/ParkingApp/src/app/statistics/statistics.component.css
@@ -62,6 +62,12 @@ th .date:hover {
   text-decoration: underline;
 }
 
+tr:hover{
+  -webkit-filter: brightness(90%);
+   filter: brightness(90%);
+   transition: 0.5s;
+}
+
 span {
   position: relative;
 }
@@ -145,3 +151,8 @@ span {
   padding: 0;
 }
 
+@media (max-width: 992px) {
+  .input-group-text{
+    width: 150px;
+  }
+  }
